# mandelbrot

./: App.cpp  App.h  CMakeLists.txt  Complex.cpp  Complex.h  Mandelbrot.cpp  Mandelbrot.h  complex.cpp  complex.h  main  main.cpp
